# app/Http/Controllers/API/AuthController.php
@@ -12,13 +12,13 @@ use Illuminate\Support\Facades\Hash;
 /**
  * @OA\Info(
  *    title="H/F Platform API",
- *    version="1.0",
+ *    version="1.0.0",
  *    description="H/F Platform API",
  *    @OA\Contact(name="Dayan Betancourt", email="dayan@hf.cx"),
  *    @OA\License(name="MIT license", url="https://opensource.org/licenses/MIT")
  * )
  * 
- * @OA\Server(url="http://hfglobal.local:8080")
+ * @OA\Server(url="https://hfglobal.hfmaracay.com/")
  */
 class AuthController extends Controller
 {
@@ -30,6 +30,7 @@ class AuthController extends Controller
    * 
    * @OA\Post(
    *    path="/api/register",
+   *    tags={"auth"},
    *    summary="Register User",
    *    @OA\Parameter(name="name", in="query", description="User's Name", required=true),
    *    @OA\Parameter(name="email", in="query", description="User's Email", required=true),
@@ -62,6 +63,7 @@ class AuthController extends Controller
    * 
    * @OA\Post(
    *    path="/api/login",
+   *    tags={"auth"},
    *    summary="Login User",
    *    @OA\Parameter(name="email", in="query", description="User's Email", required=true),
    *    @OA\Parameter(name="password", in="query", description="User's Password", required=true),
@@ -93,6 +95,7 @@ class AuthController extends Controller
    * 
    * @OA\Post(
    *    path="/api/logout",
+   *    tags={"auth"},
    *    summary="Logout User",
    *    @OA\Response(response=200, description="Logout User")
    * )
