# storage/api-docs/api-docs.json
@@ -11,16 +11,19 @@
             "name": "MIT license",
             "url": "https://opensource.org/licenses/MIT"
         },
-        "version": "1.0"
+        "version": "1.0.0"
     },
     "servers": [
         {
-            "url": "http://hfglobal.local:8080"
+            "url": "https://hfglobal.hfmaracay.com/"
         }
     ],
     "paths": {
         "/api/register": {
             "post": {
+                "tags": [
+                    "auth"
+                ],
                 "summary": "Register User",
                 "description": "Store a new user",
                 "operationId": "a718f172ff3ac464d723835815f8fb57",
@@ -53,6 +56,9 @@
         },
         "/api/login": {
             "post": {
+                "tags": [
+                    "auth"
+                ],
                 "summary": "Login User",
                 "description": "Login user",
                 "operationId": "44212a9096e4b09358281e9ec8a0701d",
@@ -79,6 +85,9 @@
         },
         "/api/logout": {
             "post": {
+                "tags": [
+                    "auth"
+                ],
                 "summary": "Logout User",
                 "description": "Logout user",
                 "operationId": "79854151e609bd20032aa5aa4d5a35c0",
@@ -91,6 +100,9 @@
         },
         "/api/occupations": {
             "get": {
+                "tags": [
+                    "occupations"
+                ],
                 "summary": "Occupations List",
                 "description": "Display a listing of the resource.",
                 "operationId": "560969ad18564364c059389ebc65e6f2",
@@ -104,6 +116,9 @@
                 }
             },
             "post": {
+                "tags": [
+                    "occupations"
+                ],
                 "summary": "Create Occupation",
                 "description": "Store a newly created resource in storage.",
                 "operationId": "7cdb34ae54c2c7a6973d6a190a2682e5",
@@ -124,6 +139,9 @@
         },
         "/api/occupations/{occupation}": {
             "get": {
+                "tags": [
+                    "occupations"
+                ],
                 "summary": "Occupation",
                 "description": "Display the specified resource.",
                 "operationId": "64b8a28013c820498496c8a5c6564d7b",
@@ -145,6 +163,9 @@
                 }
             },
             "put": {
+                "tags": [
+                    "occupations"
+                ],
                 "summary": "Update Occupation",
                 "description": "Update the specified resource in storage.",
                 "operationId": "d2d1be08fc3e42a8bf7a36e98c32f1ab",
@@ -163,6 +184,9 @@
                 }
             },
             "delete": {
+                "tags": [
+                    "occupations"
+                ],
                 "summary": "Delete Occupation",
                 "description": "Remove the specified resource from storage.",
                 "operationId": "2a7b9adeec021edef61b265885ac4747",
